-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 17.0.1
-
macOS Sequioa 15.6.1
Qt 6.9.2 for macOS
-
-
c65081932 (18.0)
"XML parsing failed. (3) Opening and ending tag mismatch." error occurs when debugging autotest that has a failing test case.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-33552 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 680652,2 | AutoTest: Fix handling debug output | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |