AutoTest: Fix handling debug output

Output coming from the debugger is retrieved differently
compared to output we get directly from running test
executables. So, the output may be buffered and we may
get chunks instead of expected complete lines.
Handle this to avoid choking on the output.

Fixes: QTCREATORBUG-33552
Change-Id: I799edda71f00aabe8b7105055f70b3215611241a
Reviewed-by: David Schulz <david.schulz@qt.io>